# cici-blog

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
alembic/: env.py
app/agent/: bootstrap.py  dedup.py  llm_processor.py  pipeline.py  rss_collector.py  rss_defaults.py  scheduler.py  search_collector.py
app/api/: agent.py  auth.py  comments.py  news.py  oauth.py  posts.py  upload.py
app/core/: config.py  database.py  deps.py  rate_limit.py  security.py
app/models/: __init__.py  blog.py  news.py  user.py
app/schemas/: auth.py  comment.py  news.py  post.py
scripts/: ensure_database.py  generate_migration.bat  generate_migration.sh  migrate.bat  migrate.sh
web/: .env.local  next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/agent/: page.tsx
web/src/app/admin/comments/: page.tsx
web/src/app/admin/news/: page.tsx
web/src/app/admin/posts/: page.tsx
web/src/app/admin/posts/new/: page.tsx
web/src/app/auth/github/callback/: page.tsx
web/src/app/auth/google/callback/: page.tsx
web/src/app/blog/[slug]/: page.tsx
web/src/app/blog/category/[name]/: page.tsx
web/src/app/blog/tag/[name]/: page.tsx
web/src/app/login/: page.tsx
web/src/app/news/: page.tsx
web/src/app/news/[slug]/: page.tsx
web/src/components/: CommentSection.tsx  Footer.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  Navbar.tsx  NewsCard.tsx  Pagination.tsx  PostCard.tsx  PostForm.tsx
web/src/lib/: api.ts  types.ts
(+2 files in other folders)
